# grounded

./: .gitignore  CLAUDE.md
.claude/: ralph-loop.3055120.local.md  ralph-loop.3096675.local.md  ralph-loop.3324189.local.md
docs/discoveries/grounded-discovery/: DISCOVERY.md  LOG.md
docs/research/grounded-abduction/: KNOWLEDGE.md  MINDMAP.md
docs/specs/: grounded-discovery.spec.md  search-augmented-ace-poc.spec.md
notebooks/: search_augmented_ace_poc.ipynb  verified_archetype_discovery_poc.ipynb
src/: README.md  __init__.py  llm_client.py  pyproject.toml  run_experiment.py  slurm_prelim.sh
src/ace_adapter/: __init__.py  data_processor.py  drsr_adapter.py  prompts.py
src/analysis/: __init__.py  collector.py  plots.py  statistics.py  symbolic.py
src/analysis/levin/: __init__.py  intervention.py  strategy_coder.py  transfer.py
src/campaign/: __init__.py  config.py  runner.py
src/conditions/: __init__.py  ace_condition.py  ace_gradient.py  drsr.py  gradient.py  pysr_baseline.py  random_search.py  static.py
src/environments/: __init__.py  base.py  kernels.py  tier1.py  tier2.py
src/gradient/: __init__.py  fitter.py  slurm_wrapper.py
src/grounded_discovery/: conftest.py
src/grounded_discovery/campaign/: runner.py
src/grounded_discovery/conditions/: random_search.py  static.py
src/grounded_discovery/gradient/: fitter.py
src/loop/: __init__.py  expression_parser.py  orchestrator.py  prompt_templates.py
src/probes/: __init__.py  structural_prior.py  zero_shot.py
src/tests/: __init__.py  test_environments.py  test_kernels.py
